refer to the README.txt file for additional information on installing the 
Distribution and to be informed about important information on distribution 
lay-out.

Changes from 1.121 to 1.122
---------------------------
(31 July 2023)

* Added accredited eMudhra joint public trust root and issuing CAs (IN)
* Added private trust eMudhra IGTF root and issuers as experimental (IN, US)

Changes from 1.120 to 1.121
---------------------------
(15 June 2023)

* Added accredited (classic) InCommon RSA IGTF Server CA 3 under the
  Sectigo USERTrust RSA root, for which namespaces have been updated (US)

Changes from 1.119 to 1.120
---------------------------
(30 May 2023)

* Added transitional CDP mirror URLs for retiring DigitalTrust CAs (AE)
* Removed discontinued NIIF-Root-CA-2 (HU)
* Removed expiring GermanGrid (GridKA CrossGrid) CA (DE)

Changes from 1.118 to 1.119
---------------------------
(13 March 2023)

* Updated UKeScience Root (2007) wih consistent string encodings (UK)
* Removed obsolete SHA1 subordinates DigiCertGridTrustCA-Classic
  and DigiCertGridCA-1-Classic from DigiCert, reflected in RPDNC namespaces
* Experimental (non-accredited) new InCommon RSA IGTF Server CA 2 (ICA under 
  Sectigo USERTrust RSA root, for which namespaces have been updated) (US)

Changes from 1.117 to 1.118
---------------------------
(27 February 2023)

* Updated GridCanada CA with re-issued SHA-2 based root (CA)
* Updated CILogon basic, silver, and openid with re-issued SHA-2 certs (US)
* Updated UKeScience Root (2007) re-issued with SHA-2, retired 2A ICA (UK)

Changes from 1.116 to 1.117
---------------------------
(29 August 2022)

* Add new intermediate ICA DigiCert Grid-TLS (US)
* Add new intermediate ICA DigiCert Grid-Client-RSA2048-SHA256-2022-CA1 (US)
* Removed discontinued NCSA-slcs-2013 following end of XSEDE (US)
* Removed discontinued PSC-Myproxy-CA following end of XSEDE (US)
* RPM packaging: rpm packages are now signed using a SHA-256 digest, file 