@@ -1,5 +1,5 @@
 #
-# @(#)$Id$
+# @(#)$Id: TrustedRootCAC4.info,v 1.1 2023/07/25 08:54:11 pmacvsdg Exp $
 # eMuhdra emSign Certifying Authority trust anchor TrustedRootCAC4
 #
 alias = TrustedRootCAC4
@@ -7,7 +7,7 @@ ca_url = https://repository.emsign.com/certs/TrustedRootCAC4.crt
 crl_url = http://crl.emsign.com/?TrustedRootCAC4.crl
 policy_url = https://repository.emsign.com/
 url = https://emudhra.com/products/digital-certificates
-email = problem-reporting@emsign.com
+email = support@emsign.com
 status = experimental
 version = @VERSION@
 sha1fp.0 = @SHA1FP.0@
