@@ -1,5 +1,5 @@
 #
-# @(#)$Id$
+# @(#)$Id: emSignSSLCAG1.info,v 1.1 2023/07/25 08:54:11 pmacvsdg Exp $
 # eMuhdra emSign Certifying Authority trust anchor emSignSSLCAG1
 #
 alias = emSignSSLCAG1
@@ -7,7 +7,7 @@ ca_url = https://repository.emsign.com/certs/emSignSSLCAG1.crt
 crl_url = http://crl.emsign.com/?emSignSSLCAG1.crl
 policy_url = https://repository.emsign.com/
 url = https://emudhra.com/products/digital-certificates
-email = problem-reporting@emsign.com
+email = support@emsign.com
 status = accredited:classic
 version = @VERSION@
 sha1fp.0 = @SHA1FP.0@
