@@ -1,4 +1,4 @@
 # EACL for eMudhra emSign CA emigtfc4
  access_id_CA   X509    '/C=US/O=eMudhra Inc./CN=emSign Issuing CA IGTF - C4'
  pos_rights     globus  CA:sign
- cond_subjects  globus  '"/C=US/O=eMudhra Inc./CN=emSign Issuing CA IGTF - C4" "/DC=com/DC=emsign/*"'
+ cond_subjects  globus  '"/C=US/O=eMudhra Inc./CN=emSign Issuing CA IGTF - C4" "/C=US/O=emSignGrid/*" "/DC=com/DC=emSignGrid/*" "/DC=org/DC=emSignGrid/*"'
