@@ -1,0 +1,32 @@
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+mQENBGTFAL8BCADOwfXGuGmjpIqqlwNtimjE66O/eeicIwJbQugW5Jx1lXsLZiQ1
+OEJ+Clr+kqK/EYWDbnV9jO+oGqvkKGKiJW1fMMZDySXojjfZITQiKoNx76/j2xeu
+5benTVuYhurTxVC+vY5Q7a210Xk+CsovOzAV59+mPxJQowivoUOfZsXZxC6Anct0
+Hg0okj+myszhdtnPo+zxBNoX/qrQqYwG9hxhpdbClHapXCQVTHibSUQI0877C2v0
+HcXgipe/Gdpu+/YzlXhoWYUIRb2n4HRAO6/xY4PUU/UwwWyWe5HpTeAs7UN2R7JY
+Oncqr7lw1F0iPP5pbQE8xcXGr/xQkQZrUd63ABEBAAG0OUVVR3JpZFBNQSBEaXN0
+cmlidXRpb24gU2lnbmluZyBLZXkgNCA8aW5mb0BldWdyaWRwbWEub3JnPokBOQQT
+AQIAIwUCZMUAvwIbAwcLCQgHAwIBBhUIAgkKCwQWAgMBAh4BAheAAAoJELBVAFZ2
+NB8awQIIAMx8TmkfDmvpVz6iBF0txtHU8lYC8lz0kieT65kGu16x03EAVHkOdtJc
+DIZCLO4+1xyo9YTcDmjKYyn8bGFPv3D8uzWbUnEwoG4OmqSoqTNR/PjSnlzGU6h+
+f5QtdUYtDnvYuKGQfMpLdFAoGQpkNLU7nTU9f97pxVzjcydYt0iROQLLyodlJoxa
+tKtFSOoGnkJOmVTeZIy6sBJ1hNngNSJg/Ajzn7ux6EFLTfv5NPpsW5PpNc88n9JL
+RZR3VkEQ5ORmQrqpy/mukpU4CCuQpBt10CRQnAJeXRb1K/DEgJi/fLK8JAN0Hvfs
+8ZmZKe3xgMA0aBbxW5LH3BGSzvKb2fWIRgQQEQIABgUCZMUA9wAKCRDDLZnIPNu8
+cYRVAJ9wSPgg1JblK60ttJXiqOB6hh/0awCg3AU3T9JKVN9aZesWmcEmeOBVfW+5
+AQ0EZMUAvwEIALkpriQUNAovKkXq7IF6vN5z0RGZG/3b1T9dN5n9Jfgto7VBlZTm
+qo+WXuy2Pv7tleVPUQsQ+xeogT+aG9D+71vU361yFe+jzqDJuFmgRqkVagW21G/j
+RyQHduMkwFfb3112MX3ZcgJ/JBvJb3g45ShZ1ls4Q4kgMDIYgYBE+sAjy3nAF1g1
+Z9jqwNnjnt9rbjPCurjxOn7NxWJdfWDPhC3MDV33cSOe7b2HmsdTwqCvK3goiQdQ
+t+Esx74xbWYTyTQ3P5xWIqVEFRlEabc8G5KspMCphrRfIQadV+TRfhr8CYGyuX92
+GIHZ8Ne+ukwUV4abpEZKeRLw6TYs7d782nkAEQEAAYkBHwQYAQIACQUCZMUAvwIb
+DAAKCRCwVQBWdjQfGjrOB/49TS0n6bglW332G2V9a6k6v9Q0k7SZy68DXETMZzK/
+WF5B9wlYGY9X2cjO6hi/wwvWY15/OlpT90jxXjRUryOaWG4UzFJiYJf7kvBGmHYL
+hb9MHlrE0YX2Rd5sKSR8n30ObNVAu52r/5TyUwO3BdS3xx/57bKUjHH+5n27bpVi
+wek6SBVrh5i52Vh5juZWnuopyKAqtQGkCmN6y2cp9b0zJXy7/tTK2gEcOs9TCrS1
+r0+vmAC9aCLkjVV3Ge+XcRGgSX9A4gKrUeUuM9bfLRNuSwemqZV3l46pWSdOqoVd
+9D72fyXtfo2/UXhpUGsUvC/7DlXRZkDU0YICz2F2ZJJv
+=a2DR
+-----END PGP PUBLIC KEY BLOCK-----
